tests/sema/fail/v41_fail_unit_sum_cross_type_compare.ep
# COMPILE_FAIL_CONTAINS: unit sum comparison expected State, got OtherState
type State = Ready | Done
type OtherState = Ready | Done

fun main(): void {
    let same = State.Ready == OtherState.Ready
}
